--- a/expenses-chart-component-main/index.html
+++ b/expenses-chart-component-main/index.html
@@ -123,5 +123,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>. -->
   </div>
+
+ <script src="./index.js"></script>
 </body>
 </html>
